--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ChatBots</title>
+	<title>ScratchBot</title>
 	<!--<link rel="stylesheet" type="text/css" href="bootstrap.css">-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!--Author: Yifan He-->
 <body>
-	
+
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="https://wwww.google.com" class="navbar-brand">ChatBots</a> 
+				<a href="#" class="navbar-brand">ScratchBot</a>
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">Home</a></li>
@@ -25,11 +25,11 @@
 			</ul>
 		</div>
 	</nav>
-	
-	<div class="container">
+
+<!-- 	<div class="container">
 		<header class="jumbotron">
 			<div class="container">
-				<h1>ChatBots for CS:5800</h1>
+				<h1>ScratchBot for CS:5800</h1>
 				<form class="form-inline">
     				<input class="form-control mr-sm-2" type="search" placeholder="Search Your ChatBot" aria-label="Search">
     				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
@@ -38,17 +38,14 @@
   				</form>
 			</div>
 		</header>
-	</div>
+	</div> -->
 	<div class="container">
 		<div class="row text-center flex-wrap">
-			<div class = "col-md-3 col-sm-2 grid1">
-				Add sth in here1
+			<div class = "col-md-3 col-sm-3 grid1 blocks">
+				Blocks
 			</div>
-			<div class = "col-md-6 col-sm-8 grid1">
-				Add sth in here2
-			</div>
-			<div class = "col-md-3 col-sm-2 grid1">
-				Add sth in here3
+			<div class = "col-md-9 col-sm-9 grid1 blocks_chosen">
+				Blocks_chosen
 			</div>
 		</div>
 	</div>
