--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="https://wwww.google.com" class="navbar-brand">ChatBots</a> 
+				<a href="#" class="navbar-brand">ScratchBot</a>
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">Home</a></li>
