--- a/help.html
+++ b/help.html
@@ -13,7 +13,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="https://wwww.google.com" class="navbar-brand">ScratchBot</a>
+				<a href="index.html" class="navbar-brand">ScratchBot</a>
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">Home</a></li>
@@ -21,14 +21,14 @@
 				<li><a href="#">Help</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Login</a></li>
-				<li><a href="#">Signup</a></li>
+				<li><a href="login.html">Login</a></li>
+				<li><a href="register.html">Signup</a></li>
 			</ul>
 		</div>
 	</nav>
 	<div class="container">
 		<h1>
-			This is our group:
+			Help
 		</h1>
 	</div>
 </body>
