--- a/register.html
+++ b/register.html
@@ -11,16 +11,16 @@
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="#" class="navbar-brand">ScratchBot</a>
+				<a href="index.html" class="navbar-brand">ScratchBot</a>
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="#">Help</a></li>
+				<li><a href="help.html">Help</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="login.html">Login</a></li>
-				<li><a href="register.html">Signup</a></li>
+				<li><a href="#">Signup</a></li>
 			</ul>
 		</div>
 	</nav>
