--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<title>About</title>
@@ -7,9 +6,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!--Author: Yifan He-->
+	<!--Author: Fred Morsy-->
 
 </head>
 <body>
+	<meta charset="UTF-8">
 	<nav class="navbar navbar-default">
 		<div class="container">
 			<div class="navbar-header">
@@ -27,9 +28,128 @@
 		</div>
 	</nav>
 	<div class="container">
-		<h1>
-			About
-		</h1>
+	
+		<h1>Team Members<br/><br/><br/></h1>
+		<!-- Fred Morsy -------------------------------------------------------------->
+		<img src="panda.jpg" alt="panda" height="400" width="630" style="border:5px solid black">
+		<h1><strong>Fred Morsy</strong></h1>
+		<h2><em>Computer Science Student</em></h2>
+		<h3>Skills</h3>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JavaScript</li>
+		</ul>
+		<h3>Hobbies</h3>
+		<ul>
+			<li>Programming</li>
+			<li>Playing Videogames</li>
+			<li>Running</li>
+		</ul>
+		<hr>
+		
+		<!-- Yifan He -------------------------------------------------------------->
+		<br/><br/><br/>
+		<img src="redPanda.jpg" alt="red panda" height="400" width="630" style="border:5px solid black">
+		<h1><strong>Yifan He</strong></h1>
+		<h2><em>Computer Science Student</em></h2>
+		<h3>Skills</h3>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JavaScript</li>
+		</ul>
+		<h3>Hobbies</h3>
+		<ul>
+			<li>Programming</li>
+			<li>Playing Videogames</li>
+			<li>Running</li>
+		</ul>
+		<hr>
+		
+		<!-- Xiaoyu Xing -------------------------------------------------------------->
+		<br/><br/><br/>
+		<img src="fish.jpg" alt="fish" height="400" width="630" style="border:5px solid black">
+		<h1><strong>Xiaoyu Xing</strong></h1>
+		<h2><em>Computer Science Student</em></h2>
+		<h3>Skills</h3>
+		<ul>
+			<li>Python</li>
+			<li>Java</li>
+			<li>Data Analytics</li>
+		</ul>
+		<h3>Hobbies</h3>
+		<ul>
+			<li>Photography</li>
+			<li>Playing Videogames</li>
+			<li>Running</li>
+		</ul>
+		<hr>
+		
+		<!-- Xinyu Chen -------------------------------------------------------------->
+		<br/><br/><br/>
+		<img src="tiger.jpg" alt="tiger" height="400" width="630" style="border:5px solid black">
+		<h1><strong>Xinyu Chen</strong></h1>
+		<h2><em>Computer Science Student</em></h2>
+		<h3>Skills</h3>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JavaScript</li>
+		</ul>
+		<h3>Hobbies</h3>
+		<ul>
+			<li>Programming</li>
+			<li>Playing Videogames</li>
+			<li>Running</li>
+		</ul>
+		<hr>
+		
+		<!-- Zixu Wang -------------------------------------------------------------->
+		<br/><br/><br/>
+		<img src="lion.jpg" alt="lion" height="400" width="630" style="border:5px solid black">
+		<h1><strong>Zixu Wang</strong></h1>
+		<h2><em>Computer Science Student</em></h2>
+		<h3>Skills</h3>
+		<ul>
+			<li>JAVA</li>
+			<li>C#</li>
+			<li>HTML/CSS/JS/XML</li>
+		</ul>
+		<h3>Hobbies</h3>
+		<ul>
+			<li>Programming</li>
+			<li>Playing Videogames</li>
+			<li>Translating</li>
+		</ul>
+		<hr>
+		
+		<!-- Jianwei Hu -------------------------------------------------------------->
+		<br/><br/><br/>
+		<img src="cat.jpg" alt="cat" height="400" width="630" style="border:5px solid black">
+		<h1><strong>Jianwei Hu</strong></h1>
+		<h2><em>Biomedical Engineering Student</em></h2>
+		<h3>Skills</h3>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>Python</li>
+			<li>JAVA</li>
+			<li>Perl</li>
+			<li>C++</li>
+
+		</ul>
+		<h3>Hobbies</h3>
+		<ul>
+			<li>Programming</li>
+			<li>Playing Videogames</li>
+			<li>Swimming</li>
+		</ul>
+		
+		 <footer>
+			<hr>
+			<p>Team Scratchbot</p>
+		</footer>
 	</div>
 </body>
 </html>
