--- a/chatbox/chatbox.html
+++ b/chatbox/chatbox.html
@@ -61,12 +61,61 @@
 		</div>
 
 		<div class="chat-input">
-			<textarea></textarea>
-			<form action="chatbox.html" method=GET>
-				<button>SEND</button>
-			</form>	
+			<textarea id="chatbox-user-input" placeholder="Please type your input."></textarea>
+			<button onclick="sendMsg()">SEND</button>
 		</div>
 
 	</div>
+	<script>
+
+		function sendMsg(){
+			/*Start of User Input*/
+			var userInput = document.getElementById('chatbox-user-input').value;
+			var userdiv = document.createElement("div");
+			userdiv.setAttribute("class", "content customer");
+			
+			var userinnerdiv = document.createElement("div");
+			userinnerdiv.setAttribute("class", "user-photo");
+
+			var userimg = document.createElement("img");
+			userimg.setAttribute("src", "./you.png");
+
+			var userp = document.createElement("p");
+			userp.setAttribute("class", "message");
+			userp.innerHTML = userInput;
+			
+			document.getElementsByClassName("chatcontent")[0].appendChild(userdiv);
+			document.getElementsByClassName("chatcontent")[0].lastElementChild.appendChild(userinnerdiv);
+			document.getElementsByClassName("chatcontent")[0].lastElementChild.getElementsByClassName("user-photo")[0].appendChild(userimg);
+			document.getElementsByClassName("chatcontent")[0].lastElementChild.appendChild(userp);
+			var contentbox = document.getElementsByClassName("chatcontent")[0];
+			document.getElementById('chatbox-user-input').value = "";
+			contentbox.scrollTop = contentbox.scrollHeight;
+			/*End of User Input*/
+
+			/*Start of Bot Reply*/
+			var botdiv = document.createElement("div");
+			botdiv.setAttribute("class", "content owner");
+
+			var botinnerdiv = document.createElement("div");
+			botinnerdiv.setAttribute("class", "user-photo");
+			
+			var botimg = document.createElement("img");
+			botimg.setAttribute("src", "./food.png");
+
+			var botp = document.createElement("p");
+			botp.setAttribute("class", "message");
+			botp.innerHTML = userInput;/*INSERT BOT REPLY VALUE HERE!*/
+
+			document.getElementsByClassName("chatcontent")[0].appendChild(botdiv);
+			document.getElementsByClassName("chatcontent")[0].lastElementChild.appendChild(botinnerdiv);
+			document.getElementsByClassName("chatcontent")[0].lastElementChild.getElementsByClassName("user-photo")[0].appendChild(botimg);
+			document.getElementsByClassName("chatcontent")[0].lastElementChild.appendChild(botp);
+			var contentbox = document.getElementsByClassName("chatcontent")[0];
+			contentbox.scrollTop = contentbox.scrollHeight;
+			/*End of Bot Reply*/
+
+		}
+	</script>
 </body>
 </html>
